src/index.css
body {
	margin: 0;
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
		"Droid Sans", "Helvetica Neue", sans-serif;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
}

code {
	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
}

body {
	background: #007bff;
	background: linear-gradient(to right, #0062e6, #33aeff);
}

.pricing .card {
	border: none;
	border-radius: 1rem;
	transition: all 0.2s;
	box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.1);
}

.card-body {
	min-height: 442px;
}

.pricing hr {
	margin: 1.5rem 0;
}

.--small {
	margin-top: 0rem !important;
}

.pricing .card-title {
	margin: 0.5rem 0;
	font-size: 0.9rem;
	letter-spacing: .1rem;
	font-weight: bold;
}

.pricing .card-price {
	font-size: 3rem;
	margin: 0;
}

.pricing .card-price .period {
	font-size: 0.8rem;
}

.pricing ul li {
	margin-bottom: 1rem;
}

.pricing .text-muted {
	opacity: 0.7;
}

.pricing .btn {
	font-size: 80%;
	border-radius: 5rem;
	letter-spacing: .1rem;
	font-weight: bold;
	padding: 1rem;
	opacity: 0.7;
	transition: all 0.2s;
}

/* Hover Effects on Pricing Card */

@media (min-width: 992px) {
	.pricing .card:hover {
		margin-top: -.25rem;
		margin-bottom: .25rem;
		box-shadow: 0 0.5rem 1rem 0 rgba(0, 0, 0, 0.3);
	}
	.pricing .card:hover .btn {
		opacity: 1;
	}
}

/*!
 * Scrolling Nav
 */
header {
	padding: 156px 0 100px;
}

section {
	padding: 150px 0;
}

.datePicker {
	border-style: solid;
	border-radius: 4px;
	border-width: thin;
	border-color: #ced4d9;
	text-align: center;
}

.custom-select {
	text-align: center;
}

.btn:disabled {
	background-color: #ced4d9 !important;
	border-color: #ced4d9 !important;
}

.hideToolTip {
	visibility: hidden;
}

.husky {
	width: 100%;
	max-width: 375px;
	height: auto;
	margin-top: 24px;
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.huskyNav {
	height: 40px;
	padding-right: 10px;
}

.card-container {
	display: flex;
	flex-direction: column;
	height: 100%;
}

.button-container {
	display: flex;
	-webkit-flex: 1 1 auto;
	-ms-flex: 1 1 auto;
	flex: 1 1 auto;
}

.button {
	align-self: flex-end;
}

.dateError {
	color: #ff0033;
	align-self: center;
	margin: 0;
	height: 30px;
}

@media only screen and (max-width: 991px) {
	.card-body {
		min-height: 350px;
	}
}

.login,
.image {
	min-height: 30vh;
	max-width: 90vw;
	margin: 0 auto;
}

.bg-image {
	background-image: url('https://source.unsplash.com/WEQbe2jBg40/600x1200');
	background-size: cover;
	background-position: center;
}

.login-heading {
	font-weight: 300;
}

.btn-login {
	font-size: 0.9rem;
	letter-spacing: 0.05rem;
	padding: 0.75rem 1rem;
	border-radius: 2rem;
}

.form-label-group {
	position: relative;
	margin-bottom: 1rem;
}

.form-label-group > input,
.form-label-group > label {
	padding: var(--input-padding-y) var(--input-padding-x);
	height: auto;
	border-radius: 2rem;
}

.form-label-group > label {
	position: absolute;
	top: 0;
	left: 0;
	display: block;
	width: 100%;
	margin-bottom: 0;
	/* Override default `<label>` margin */
	line-height: 1.5;
	color: #495057;
	cursor: text;
	/* Match the input under the label */
	border: 1px solid transparent;
	border-radius: .25rem;
	transition: all .1s ease-in-out;
}

.form-label-group input::-webkit-input-placeholder {
	color: transparent;
}

.form-label-group input:-ms-input-placeholder {
	color: transparent;
}

.form-label-group input::-ms-input-placeholder {
	color: transparent;
}

.form-label-group input::-moz-placeholder {
	color: transparent;
}

.form-label-group input::placeholder {
	color: transparent;
}

.form-label-group input:not(:placeholder-shown) {
	padding-top: calc(var(--input-padding-y) + var(--input-padding-y) * (2 / 3));
	padding-bottom: calc(var(--input-padding-y) / 3);
}

.form-label-group input:not(:placeholder-shown) ~ label {
	padding-top: calc(var(--input-padding-y) / 3);
	padding-bottom: calc(var(--input-padding-y) / 3);
	font-size: 12px;
	color: #777;
}

/* Fallback for Edge
-------------------------------------------------- */

@supports (-ms-ime-align: auto) {
	.form-label-group > label {
		display: none;
	}
	.form-label-group input::-ms-input-placeholder {
		color: #777;
	}
}

/* Fallback for IE
-------------------------------------------------- */

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
	.form-label-group > label {
		display: none;
	}
	.form-label-group input:-ms-input-placeholder {
		color: #777;
	}
}

.contactContainer {
	width: 90% !important;
	border-radius: 25px !important;
	margin: 62px 0;
}

.rewardCard {
	width: 82%;
}

